--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -13,20 +13,20 @@ script(type='text/javascript', src='lib/angular-bootstrap/ui-bootstrap-tpls.js')
 script(type='text/javascript', src='lib/angular-ui-utils/modules/route/route.js')
 
 //Application Init
-script(type='text/javascript', src='js/app.js')
-script(type='text/javascript', src='js/config.js')
-script(type='text/javascript', src='js/directives.js')
-script(type='text/javascript', src='js/filters.js')
+script(type='text/javascript', src='script/app.js')
+script(type='text/javascript', src='script/config.js')
+script(type='text/javascript', src='script/directives.js')
+script(type='text/javascript', src='script/filters.js')
 
 //Application Services
-script(type='text/javascript', src='js/services/global.js')
-script(type='text/javascript', src='js/services/articles.js')
+script(type='text/javascript', src='script/services/global.js')
+script(type='text/javascript', src='script/services/articles.js')
 
 //Application Controllers
-script(type='text/javascript', src='js/controllers/articles.js')
-script(type='text/javascript', src='js/controllers/index.js')
-script(type='text/javascript', src='js/controllers/header.js')	
-script(type='text/javascript', src='js/init.js')
+script(type='text/javascript', src='script/controllers/articles.js')
+script(type='text/javascript', src='script/controllers/index.js')
+script(type='text/javascript', src='script/controllers/header.js')
+script(type='text/javascript', src='script/init.js')
 
 //Livereload script rendered 
 script(type='text/javascript', src='http://localhost:35729/livereload.js')	
