--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -21,9 +21,7 @@ head
 
   link(rel='stylesheet', href='lib/bootstrap/css/bootstrap.css')
   link(rel='stylesheet', href='lib/bootstrap/css/bootstrap-responsive.css')
-  link(rel='stylesheet', href='css/common.css')
-
-  link(rel='stylesheet', href='css/views/articles.css')
+  link(rel='stylesheet', href='style/main.css')
 
   //if lt IE 9
     script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
