--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,2 +1,3 @@
-<% layout('layout') -%>
-This is loaded from page 1 and overrides body in the layout.ejs.
+<% layout('layout') %>
+<section data-ng-view></section>
+<script type="text/javascript">window.user = <%-user%>;</script>
