--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -1,3 +1,63 @@
-<html>
-<%- body %>
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:fb="https://www.facebook.com/2008/fbml" itemscope="itemscope"
+      itemtype="http://schema.org/Product">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>CLEAN</title>
+    <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+    <meta name="keywords" content="node.js, express, mongoose, mongodb, angularjs">
+    <meta name="description" content="CLEAN">
+    <link href="/img/icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <meta property="fb:app_id" content="APP_ID">
+    <meta property="og:title" content="undefined - undefined">
+    <meta property="og:description" content="CLEAN">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="APP_URL">
+    <meta property="og:image" content="APP_LOGO">
+    <meta property="og:site_name" content="CLEAN - A Modern Stack">
+    <meta property="fb:admins" content="APP_ADMIN">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.css">
+    <link rel="stylesheet" href="style/main.css">
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]--></head>
+<body>
+<header data-ng-include="'views/header.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
+
+<section class="content">
+    <section class="container">
+        <%- body %>
+    </section>
+</section>
+
+<script type="text/javascript" src="lib/jquery/jquery.js"></script>
+<!--Bootstrap-->
+<script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
+<!--AngularJS-->
+<script type="text/javascript" src="lib/angular/angular.js"></script>
+<script type="text/javascript" src="lib/angular-cookies/angular-cookies.js"></script>
+<script type="text/javascript" src="lib/angular-resource/angular-resource.js"></script>
+<!--Angular UI-->
+<script type="text/javascript" src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script type="text/javascript" src="lib/angular-ui-utils/modules/route/route.js"></script>
+<!--Application Init-->
+<script type="text/javascript" src="script/app.js"></script>
+<script type="text/javascript" src="script/config.js"></script>
+<script type="text/javascript" src="script/directives.js"></script>
+<script type="text/javascript" src="script/filters.js"></script>
+<!--Application Services-->
+<script type="text/javascript" src="script/services/global.js"></script>
+<script type="text/javascript" src="script/services/articles.js"></script>
+<!--Application Controllers-->
+<script type="text/javascript" src="script/controllers/articles.js"></script>
+<script type="text/javascript" src="script/controllers/index.js"></script>
+<script type="text/javascript" src="script/controllers/header.js"></script>
+<script type="text/javascript" src="script/init.js"></script>
+<!--Livereload script rendered -->
+<script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
+</body>
 </html>
