Initial commit, preparing for accounts

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,3 +1,9 @@
 <section data-ng-controller="IndexController">
 	<h1>Welcome to Laere</h1>
+    <p>Start by creating your account on signing in an existing one.</p>
+    <p>Currently created accounts:</p>
+    <ul class="mock">
+        <li><a href="//dipuc.laeredev.co:3000">DI PUC-Rio</a></li>
+        <li><a href="//vtex.laeredev.co:3000">VTEX</a></li>
+    </ul>
 </section>
