--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -6,25 +6,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>CLEAN</title>
+    <title>Laere</title>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-    <meta name="keywords" content="node.js, express, mongoose, mongodb, angularjs">
-    <meta name="description" content="CLEAN">
+    <meta name="keywords" content="classrooms, courses, teaching, teach, programming">
+    <meta name="description" content="Laere - the online classroom engine">
     <link href="/img/icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <meta property="fb:app_id" content="APP_ID">
-    <meta property="og:title" content="undefined - undefined">
-    <meta property="og:description" content="CLEAN">
+    <meta property="og:title" content="Laere - the online classroom engine">
+    <meta property="og:description" content="Learn and teach online">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="APP_URL">
-    <meta property="og:image" content="APP_LOGO">
-    <meta property="og:site_name" content="CLEAN - A Modern Stack">
-    <meta property="fb:admins" content="APP_ADMIN">
+    <meta property="og:url" content="http://laere.co">
+    <meta property="og:image" content="http://laere.co/logo.png">
+    <meta property="og:site_name" content="Laere - the online classroom engine">
+    <meta property="fb:admins" content="gadr90">
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.css">
     <link rel="stylesheet" href="style/main.css">
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]--></head>
+    <![endif]-->
+</head>
 <body>
 <header data-ng-include="'views/header.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
 
@@ -44,19 +45,22 @@
 <!--Angular UI-->
 <script type="text/javascript" src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script type="text/javascript" src="lib/angular-ui-utils/modules/route/route.js"></script>
-<!--Application Init-->
 <script type="text/javascript" src="script/app.js"></script>
-<script type="text/javascript" src="script/config.js"></script>
-<script type="text/javascript" src="script/directives.js"></script>
-<script type="text/javascript" src="script/filters.js"></script>
-<!--Application Services-->
-<script type="text/javascript" src="script/services/global.js"></script>
-<script type="text/javascript" src="script/services/articles.js"></script>
-<!--Application Controllers-->
-<script type="text/javascript" src="script/controllers/articles.js"></script>
+<!--Articles-->
+<script type="text/javascript" src="script/article/article-service.js"></script>
+<script type="text/javascript" src="script/article/article-controller.js"></script>
+<!--Accounts-->
+<script type="text/javascript" src="script/account/account-service.js"></script>
+<script type="text/javascript" src="script/account/account-controller.js"></script>
+<!--Users-->
+<script type="text/javascript" src="script/user/user-service.js"></script>
+<script type="text/javascript" src="script/user/user-controller.js"></script>
+<!--Courses-->
+<script type="text/javascript" src="script/course/course-service.js"></script>
+<script type="text/javascript" src="script/course/course-controller.js"></script>
+<!--Global-->
 <script type="text/javascript" src="script/controllers/index.js"></script>
 <script type="text/javascript" src="script/controllers/header.js"></script>
-<script type="text/javascript" src="script/init.js"></script>
 <!--Livereload script rendered -->
 <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 </body>
