--- a/public/views/header.html
+++ b/public/views/header.html
@@ -1,10 +1,10 @@
 <div class="navbar-inner" data-ng-controller="HeaderController">
     <ul class="nav">
         <li>
-            <a class="brand" href="/">Laere {{ account }}</a>
+            <a class="brand" href="/">Laere</a>
         </li>
         <li data-ng-repeat="item in menu" data-ng-show="global.user" ui-route="/{{item.link}}" ng-class="{active: $uiRoute}">
-            <a href="#!/{{item.link}}">{{item.title}}</a>
+            <a href="#/{{item.link}}">{{item.title}}</a>
         </li>
     </ul>
     <ul class="nav pull-right" data-ng-hide="global.authenticated">
