Shows accounts on index and allows removing them from list

--- a/public/views/accounts/edit.html
+++ b/public/views/accounts/edit.html
@@ -3,7 +3,8 @@
         <div class="control-group">
             <label class="control-label" for="name">Name</label>
             <div class="controls">
-                <input type="text" data-ng-model="account.name" id="name" placeholder="Name" required>
+                <input type="text" data-ng-model="account.name" id="name" placeholder="Name" class="input-small" required>
+                <span>.laere.co</span>
             </div>
         </div>
         <div class="control-group">
