--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,9 +1,10 @@
 <section data-ng-controller="IndexController">
 	<h1>Welcome to Laere</h1>
-    <p>Start by creating your account on signing in an existing one.</p>
+    <p>Start by <a href="/#/accounts/create">creating your account</a> on signing in an existing one.</p>
     <p>Currently created accounts:</p>
-    <ul class="mock">
-        <li><a href="//dipuc.laeredev.co:3000">DI PUC-Rio</a></li>
-        <li><a href="//vtex.laeredev.co:3000">VTEX</a></li>
+    <ul class="accounts">
+        <li data-ng-repeat="account in accounts">
+            <a href="//{{account.name}}.laeredev.co:3000">{{account.label}}</a>
+        </li>
     </ul>
 </section>
