--- a/public/views/accounts/view.html
+++ b/public/views/accounts/view.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="AccountsController" data-ng-init="findOne()">
+<section data-ng-controller="AccountsController">
 	<span>{{account.created | date:'medium'}}</span> /
 	<span>{{account.creator.name}}</span>
 	<h2>{{account.name}} <a data-ng-show="global.user._id == account.creator._id" href="/#/accounts/{{account._id}}/edit">edit</a></h2>
