--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -19,15 +19,15 @@
     <meta property="og:image" content="http://laere.co/logo.png">
     <meta property="og:site_name" content="Laere - the online classroom engine">
     <meta property="fb:admins" content="gadr90">
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.css">
+    <link rel="stylesheet" href="lib/bootstrap/less/bootstrap.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400">
     <link rel="stylesheet" href="style/main.css">
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
 <body>
-<header data-ng-include="'views/header.html'" class="navbar navbar-fixed-top navbar-inverse"></header>
+<header data-ng-include="'views/header.html'"></header>
 
 <section class="content">
     <section class="container">
