--- a/public/style/main.less
+++ b/public/style/main.less
@@ -1,5 +1,8 @@
 @import 'views/articles.less';
 
+body {
+    font-family: 'Lato', sans-serif;
+}
 .navbar .nav>li>a.brand {
     padding-left:20px;
     margin-left:0
