Test continuous delivery

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,5 +1,5 @@
 <section data-ng-controller="IndexController">
-	<h1>Welcome to Laere</h1>
+	<h1>Laere</h1>
     <p>Start by <a href="/#/accounts/create">creating your account</a> on signing in an existing one.</p>
     <p>Currently created accounts:</p>
     <ul class="accounts">
