Initial account detection

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,3 +1,6 @@
 <% layout('layout') %>
 <section data-ng-view></section>
-<script type="text/javascript">window.user = <%-user%>;</script>
+<script type="text/javascript">
+    window.user = <%-user%>;
+    window.account = <%-account%>;
+</script>
