início da UI de school

--- a/public/style/main.less
+++ b/public/style/main.less
@@ -1,8 +1,21 @@
 @import 'views/articles.less';
 
-body {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: 'Lato', sans-serif;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {font-weight: 300;}
+
 .navbar .nav>li>a.brand {
     padding-left:20px;
     margin-left:0
