--- a/public/views/accounts/edit.html
+++ b/public/views/accounts/edit.html
@@ -1,5 +1,8 @@
 <section class="col-md-6 col-md-offset-3" data-ng-controller="AccountsController">
-    <h2>Create an account</h2>
+    <div class="page-header">
+        <h2>Create your co0l school</h2>
+    </div>
+
     <form class="form" data-ng-submit="createOrUpdate()">
         <div class="form-group">
             <label class="control-label" for="name">URL</label>
@@ -9,12 +12,14 @@
                 <span class="input-group-addon">.laere.co</span>
             </div>
         </div>
+
         <div class="form-group">
             <label class="control-label" for="label">Title</label>
             <input type="text" data-ng-model="account.label" id="label" placeholder="My account" required class="form-control input-lg">
         </div>
 
-        <input type="submit" class="btn btn-success btn-lg pull-right" value="Create account">
+        <button type="submit" class="btn btn-success btn-lg pull-right">Create school  <span class="glyphicon glyphicon-ok-sign"></span></button>
+
         </div>
     </form>
 </section>
