--- a/public/views/accounts/list.html
+++ b/public/views/accounts/list.html
@@ -1,4 +1,9 @@
-<section data-ng-controller="AccountsController">
+<section class="col-md-6 col-md-offset-3" data-ng-controller="AccountsController">
+    <div class="page-header clearfix">
+        <h2 class="pull-left">Schools</h2>
+		<a href="/#/accounts/create" class="btn btn-success pull-right">Create new school</a>
+    </div>
+
 	<ul class="accounts unstyled">
 		<li data-ng-repeat="account in accounts">
 			<span>{{account.created | date:'medium'}}</span> /
@@ -8,5 +13,4 @@
             <button class="btn" ng-click="remove(account)" ng-show="account._id">Remove</button>
 		</li>
 	</ul>
-	<a href="/#/accounts/create">Create account</a>
 </section>
