Refactors account into school

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -2,5 +2,5 @@
 <section data-ng-view></section>
 <script type="text/javascript">
     window.user = <%-user%>;
-    window.account = <%-account%>;
+    window.school = <%-school%>;
 </script>
