--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -49,9 +49,9 @@
 <!--Articles-->
 <script type="text/javascript" src="script/article/article-service.js"></script>
 <script type="text/javascript" src="script/article/article-controller.js"></script>
-<!--Accounts-->
-<script type="text/javascript" src="script/account/account-service.js"></script>
-<script type="text/javascript" src="script/account/account-controller.js"></script>
+<!--Schools-->
+<script type="text/javascript" src="script/school/school-service.js"></script>
+<script type="text/javascript" src="script/school/school-controller.js"></script>
 <!--Users-->
 <script type="text/javascript" src="script/user/user-service.js"></script>
 <script type="text/javascript" src="script/user/user-controller.js"></script>
