--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,10 +1,10 @@
 <section data-ng-controller="IndexController">
 	<h1>Laere</h1>
-    <p>Start by <a href="/#/accounts/create">creating your account</a> on signing in an existing one.</p>
-    <p>Currently created accounts:</p>
-    <ul class="accounts">
-        <li data-ng-repeat="account in accounts">
-            <a href="//{{account.name}}.laeredev.co:3000">{{account.label}}</a>
+    <p>Start by <a href="/#/schools/create">creating your school</a> on signing in an existing one.</p>
+    <p>Currently created schools:</p>
+    <ul class="schools">
+        <li data-ng-repeat="school in schools">
+            <a href="//{{school.name}}.laeredev.co:3000">{{school.label}}</a>
         </li>
     </ul>
 </section>
