--- a/public/views/users/edit.html
+++ b/public/views/users/edit.html
@@ -25,9 +25,9 @@
             </div>
         </div>
         <div class="control-group">
-            <label class="control-label" for="accountName">Account</label>
+            <label class="control-label" for="schoolName">School</label>
             <div class="controls">
-                <input type="text" data-ng-model="user.accountName" id="accountName" placeholder="Account" required>
+                <input type="text" data-ng-model="user.schoolName" id="schoolName" placeholder="School" required>
             </div>
         </div>
         <div class="control-group">
