--- a/public/views/users/view.html
+++ b/public/views/users/view.html
@@ -2,5 +2,5 @@
 	<h2>{{user.username}} <a href="/#/users/{{user._id}}/edit">edit</a></h2>
 	<div>{{user.email}}</div>
 	<div>{{user.name}}</div>
-	<div>{{user.accountName}}</div>
+	<div>{{user.schoolName}}</div>
 </section>
