Add env and host variables

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -3,4 +3,6 @@
 <script type="text/javascript">
     window.user = <%-user%>;
     window.school = <%-school%>;
+    window.env = <%-env%>;
+    window.laereHost = <%-host%>;
 </script>
