--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,10 +1,15 @@
 <section data-ng-controller="IndexController">
-	<h1>Laere</h1>
-    <p>Start by <a href="/#/schools/create">creating your school</a> on signing in an existing one.</p>
-    <p>Currently created schools:</p>
-    <ul class="schools">
-        <li data-ng-repeat="school in schools">
-            <a href="//{{school.name}}.laeredev.co:3000">{{school.label}}</a>
-        </li>
-    </ul>
+    <div data-ng-show="global.school">
+        <h1>Laere {{global.school.label}}</h1>
+    </div>
+    <div data-ng-hide="global.school">
+        <h1>Laere</h1>
+        <p>Start by <a href="/#/schools/create">creating your school</a> on signing in an existing one.</p>
+        <p>Currently created schools:</p>
+        <ul class="schools">
+            <li data-ng-repeat="school in schools">
+                <a href="//{{school.name}}.{{global.host}}">{{school.label}}</a>
+            </li>
+        </ul>
+    </div>
 </section>
