estrutura de cards dos cursos e alinhamento do botão "create new"

--- a/public/style/main.less
+++ b/public/style/main.less
@@ -26,6 +26,12 @@ h6 {font-weight: 300;}
     width:100%
 }
 
+.page-header {
+    .pull-right {
+        margin-top: 20px;
+    }
+}
+
 footer {
     position:fixed;
     left:0px;
