--- a/public/views/header.html
+++ b/public/views/header.html
@@ -23,7 +23,7 @@
 
     <ul class="nav navbar-nav navbar-right" data-ng-show="global.authenticated">
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> 
 				{{global.user.name}} <b class="caret"></b>
 			</a>
             <ul class="dropdown-menu">
