--- a/public/style/main.less
+++ b/public/style/main.less
@@ -21,6 +21,10 @@ h6 {font-weight: 300;}
     margin-left:0
 }
 
+.panel {
+    .glyphicon-trash {cursor: pointer}
+}
+
 .content {
     margin-top:50px;
     width:100%
