--- a/public/views/courses/edit.html
+++ b/public/views/courses/edit.html
@@ -15,7 +15,12 @@
             <input type="text" data-ng-model="course.code" id="code" placeholder="e.g. INF1005" required class="form-control input-lg">
         </div>
 
-        <button type="submit" class="btn btn-success btn-lg pull-right">Create course  <span class="glyphicon glyphicon-ok-sign"></span></button>
+        <div data-ng-show="course._id">
+            <button type="submit" class="btn btn-success btn-lg pull-right" data-ng-hide="edit.content">Update course  <span class="glyphicon glyphicon-ok-sign"></span></button>
+        </div>
+        <div data-ng-hide="course._id">
+            <button type="submit" class="btn btn-success btn-lg pull-right" data-ng-hide="edit.content">Create course  <span class="glyphicon glyphicon-ok-sign"></span></button>
+        </div>
     </form>
 
     <div ng-include="'views/content/list.html'" class="row"></div>
