--- a/public/views/content/edit.html
+++ b/public/views/content/edit.html
@@ -24,21 +24,23 @@
         </div>
         <div class="form-group">
             <label class="control-label" for="name">Name</label>
-            <input type="text" data-ng-model="edit.content.name" id="name" placeholder="Content name" required class="form-control input-lg">
+            <input type="text" data-ng-model="edit.content.name" id="name" placeholder="Content name" class="form-control input-lg">
         </div>
         <div class="form-group">
             <label class="control-label" for="url">URL</label>
-            <input type="text" data-ng-model="edit.content.url" id="url" placeholder="Content URL" required class="form-control input-lg">
+            <input type="text" data-ng-model="edit.content.url" id="url" placeholder="Content URL" class="form-control input-lg">
         </div>
         <div class="form-group">
             <label class="control-label" for="description">Description</label>
-            <input type="text" data-ng-model="edit.content.description" id="description" placeholder="Content Description" required class="form-control input-lg">
+            <input type="text" data-ng-model="edit.content.description" id="description" placeholder="Content Description" class="form-control input-lg">
         </div>
         <div class="form-group">
             <label class="control-label" for="tags">Tags</label>
-            <input type="text" data-ng-model="edit.content.tags" id="tags" placeholder="Content tags" required class="form-control input-lg">
+            <input type="text" data-ng-model="edit.content.tags" id="tags" placeholder="Content tags" class="form-control input-lg">
         </div>
 
-        <button type="submit" class="btn btn-success btn-lg">Create content  <span class="glyphicon glyphicon-ok-sign"></span></button>
+        <button type="submit" class="btn btn-success btn-lg" data-ng-show="edit.content.index != null">Update content  <span class="glyphicon glyphicon-ok-sign"></span></button>
+        <button type="submit" class="btn btn-success btn-lg" data-ng-hide="edit.content.index != null">Create content  <span class="glyphicon glyphicon-ok-sign"></span></button>
+        <button type="button" class="btn btn-link btn-lg" ng-click="edit.content = undefined">Cancel</span></button>
     </form>
 </section>
