Allows choosing school in user

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -20,7 +20,7 @@
     <meta property="og:site_name" content="Laere - the online classroom engine">
     <meta property="fb:admins" content="gadr90">
     <link rel="stylesheet" href="lib/bootstrap/less/bootstrap.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400">
+    <!--<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400">-->
     <link rel="stylesheet" href="style/main.css">
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
