--- a/public/views/users/edit.html
+++ b/public/views/users/edit.html
@@ -3,31 +3,32 @@
         <div class="control-group">
             <label class="control-label" for="name">Name</label>
             <div class="controls">
-                <input type="text" data-ng-model="user.name" id="name" placeholder="Name" required>
+                <input type="text" name="name" data-ng-model="user.name" id="name" placeholder="Name" required>
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="username">Username</label>
             <div class="controls">
-                <input type="text" data-ng-model="user.username" id="username" placeholder="Username" required>
+                <input type="text" name="username" data-ng-model="user.username" id="username" placeholder="Username" required>
             </div>
         </div>
         <div class="control-group">
             <label class="control-label" for="email">Email</label>
             <div class="controls">
-                <input type="text" data-ng-model="user.email" id="email" placeholder="Email" required>
+                <input type="text" name="email" data-ng-model="user.email" id="email" placeholder="Email" required>
             </div>
         </div>
         <div class="control-group" ng-hide="user._id">
             <label class="control-label" for="password">Password</label>
             <div class="controls">
-                <input type="text" data-ng-model="user.password" id="password" placeholder="Password" required>
+                <input type="text" name="password" data-ng-model="user.password" id="password" placeholder="Password" ng-required="!user._id">
             </div>
         </div>
         <div class="control-group">
-            <label class="control-label" for="schoolName">School</label>
+            <label class="control-label" for="school">School</label>
             <div class="controls">
-                <input type="text" data-ng-model="user.schoolName" id="schoolName" placeholder="School" required>
+                <select name="school" id="school" ng-model="user.school" ng-options="school.name as school.label for school in schools">
+                </select>
             </div>
         </div>
         <div class="control-group">
