--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -36,12 +36,15 @@
 </section>
 
 <script type="text/javascript" src="lib/jquery/jquery.js"></script>
+<script type="text/javascript" src="lib/lodash/dist/lodash.min.js"></script>
 <!--Bootstrap-->
 <script type="text/javascript" src="lib/bootstrap/dist/js/bootstrap.js"></script>
 <!--AngularJS-->
 <script type="text/javascript" src="lib/angular/angular.js"></script>
 <script type="text/javascript" src="lib/angular-cookies/angular-cookies.js"></script>
 <script type="text/javascript" src="lib/angular-resource/angular-resource.js"></script>
+<script type="text/javascript" src="lib/angular-translate/angular-translate.min.js"></script>
+<script type="text/javascript" src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
 <!--Angular UI-->
 <script type="text/javascript" src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script type="text/javascript" src="lib/angular-ui-utils/modules/route/route.js"></script>
