Fix creation of user trough CRUD and uses username for login

--- a/app/views/users/signin.ejs
+++ b/app/views/users/signin.ejs
@@ -13,11 +13,11 @@
             </p>
 
             <div class="control-group">
-                <label for="email" class="control-label">Email</label>
+                <label for="username" class="control-label">Username</label>
 
                 <div class="controls">
-                    <input id="email" type="text" name="email"
-                           placeholder="Email"/>
+                    <input id="text" type="text" name="username"
+                           placeholder="Username"/>
                 </div>
             </div>
             <div class="control-group">
