--- a/app/views/users/signup.ejs
+++ b/app/views/users/signup.ejs
@@ -6,7 +6,7 @@
                 href="/auth/twitter"><img src="/img/icons/twitter.png"/></a><a
                 href="/auth/google"><img src="/img/icons/google.png"/></a></div>
     <div class="span6">
-        <form action="/users" method="post" class="signup form-horizontal">
+        <form action="/signup" method="post" class="signup form-horizontal">
             <p class="error">
             <ul>
                 <% if (errors) for(var i=0; i<errors.length; i++) {%>
