Update angular to 1.2.0rc3 and remove unused libs

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -35,19 +35,16 @@
     </section>
 </section>
 
-<script type="text/javascript" src="lib/jquery/jquery.js"></script>
+<!--Libs-->
 <script type="text/javascript" src="lib/lodash/dist/lodash.min.js"></script>
-<!--Bootstrap-->
-<script type="text/javascript" src="lib/bootstrap/dist/js/bootstrap.js"></script>
-<!--AngularJS-->
 <script type="text/javascript" src="lib/angular/angular.js"></script>
+<script type="text/javascript" src="lib/angular-route/angular-route.js"></script>
 <script type="text/javascript" src="lib/angular-cookies/angular-cookies.js"></script>
 <script type="text/javascript" src="lib/angular-resource/angular-resource.js"></script>
 <script type="text/javascript" src="lib/angular-translate/angular-translate.min.js"></script>
 <script type="text/javascript" src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
-<!--Angular UI-->
-<script type="text/javascript" src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script type="text/javascript" src="lib/angular-ui-utils/modules/route/route.js"></script>
+<script type="text/javascript" src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+<!--App-->
 <script type="text/javascript" src="script/app.js"></script>
 <!--Schools-->
 <script type="text/javascript" src="script/school/school-service.js"></script>
@@ -61,7 +58,7 @@
 <!--Global-->
 <script type="text/javascript" src="script/controllers/index.js"></script>
 <script type="text/javascript" src="script/controllers/header.js"></script>
-<!--Livereload script rendered -->
+<!--Livereload script -->
 <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
