--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -37,10 +37,10 @@
 
 <!--Libs-->
 <script type="text/javascript" src="lib/lodash/dist/lodash.min.js"></script>
-<script type="text/javascript" src="lib/angular/angular.js"></script>
-<script type="text/javascript" src="lib/angular-route/angular-route.js"></script>
-<script type="text/javascript" src="lib/angular-cookies/angular-cookies.js"></script>
-<script type="text/javascript" src="lib/angular-resource/angular-resource.js"></script>
+<script type="text/javascript" src="lib/angular/angular.min.js"></script>
+<script type="text/javascript" src="lib/angular-route/angular-route.min.js"></script>
+<script type="text/javascript" src="lib/angular-cookies/angular-cookies.min.js"></script>
+<script type="text/javascript" src="lib/angular-resource/angular-resource.min.js"></script>
 <script type="text/javascript" src="lib/angular-translate/angular-translate.min.js"></script>
 <script type="text/javascript" src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
 <script type="text/javascript" src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -59,6 +59,8 @@
 <script type="text/javascript" src="script/controllers/index.js"></script>
 <script type="text/javascript" src="script/controllers/header.js"></script>
 <!--Livereload script -->
-<script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
+<% if (env.indexOf('development') != -1 ) { %>
+    <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
+<% } %>
 </body>
 </html>
