Implements classroom CRUD inside course editing

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -56,8 +56,9 @@
 <script type="text/javascript" src="script/course/course-service.js"></script>
 <script type="text/javascript" src="script/course/course-controller.js"></script>
 <!--Global-->
-<script type="text/javascript" src="script/controllers/index.js"></script>
-<script type="text/javascript" src="script/controllers/header.js"></script>
+<script type="text/javascript" src="script/misc/directives.js"></script>
+<script type="text/javascript" src="script/misc/index-controller.js"></script>
+<script type="text/javascript" src="script/misc/header-controller.js"></script>
 <!--Livereload script -->
 <% if (env.indexOf('development') != -1 ) { %>
     <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
