--- a/public/views/classrooms/edit.html
+++ b/public/views/classrooms/edit.html
@@ -6,32 +6,64 @@
         </div>
         <div class="form-group">
             <label class="control-label" for="startDate">Start Date</label>
-            <input type="date" data-ng-model="edit.classroom.startDate" id="startDate" class="form-control input-lg">
+            <input type="text"
+                   id="startDate"
+                   class="form-control input-lg"
+                   datepicker-popup="dd-MMMM-yyyy"
+                   ng-model="edit.classroom.startDate"
+                   required="true" />
         </div>
         <div class="form-group">
             <label class="control-label" for="endDate">End Date</label>
-            <input type="date" data-ng-model="edit.classroom.endDate" id="endDate" class="form-control input-lg">
+            <input type="text"
+                   id="endDate"
+                   class="form-control input-lg"
+                   datepicker-popup="dd-MMMM-yyyy"
+                   ng-model="edit.classroom.endDate"
+                   required="true" />
         </div>
         <div class="form-group">
             <label class="control-label" for="addTeacher">Add Teacher</label>
-            <input type="text" id="addTeacher" ng-model="teacherUsername" placeholder="Teacher username" class="form-control input-lg">
-            <button ng-click="addTeacher(teacherUsername)">Add</button>
+            <div class="input-group">
+                <input type="text"
+                       class="form-control input-lg"
+                       id="addTeacher"
+                       ng-model="edit.classroom.teacherUsername"
+                       typeahead-on-select="addTeacher($item)"
+                       typeahead="teacher.username for teacher in teachers | filter:$viewValue | filter:existingTeacher | limitTo:8">
+                <span class="input-group-btn">
+                    <button class="btn btn-default input-lg" ng-click="addTeacher()" type="button">Add</button>
+                </span>
+            </div>
         </div>
         <div>
             <p>Teachers:</p>
             <ul data-ng-repeat="teacher in edit.classroom.teachers">
-                <li>{{teacher.name}} ({{teacher.username}})</li>
+                <li>{{teacher.name}} ({{teacher.username}})
+                    <i class="glyphicon glyphicon-trash" ng-click="edit.classroom.teachers.splice($index, 1)"></i>
+                </li>
             </ul>
         </div>
         <div class="form-group">
             <label class="control-label" for="addStudent">Add Student</label>
-            <input type="text" id="addStudent" placeholder="Student username" class="form-control input-lg">
-            <button ng-click="addStudent(studentUsername)">Add</button>
+            <div class="input-group">
+                <input type="text"
+                       class="form-control input-lg"
+                       id="addStudent"
+                       ng-model="edit.classroom.studentUsername"
+                       typeahead-on-select="addStudent($item)"
+                       typeahead="student.username for student in students | filter:$viewValue | filter:existingStudent | limitTo:8">
+                <span class="input-group-btn">
+                    <button class="btn btn-default input-lg" ng-click="addStudent()" type="button">Add</button>
+                </span>
+            </div>
         </div>
         <div>
             <p>Students:</p>
             <ul data-ng-repeat="student in edit.classroom.students">
-                <li>{{student.name}} ({{student.username}})</li>
+                <li>{{student.name}} ({{student.username}})
+                    <i class="glyphicon glyphicon-trash" ng-click="edit.classroom.students.splice($index, 1)"></i>
+                </li>
             </ul>
         </div>
 
