--- a/public/style/main.less
+++ b/public/style/main.less
@@ -1,5 +1,18 @@
 @import 'views/articles.less';
 
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Lato Light'), local('Lato-Light'), url(../fonts/lato300.woff) format('woff');
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Lato Regular'), local('Lato-Regular'), url(../fonts/lato400.woff) format('woff');
+}
+
 body,
 h1,
 h2,
@@ -62,6 +75,8 @@ h6 {font-weight: 300;}
         margin-top: 20px;
     }
 }
+
+a.list-group-item .list-group-item-heading {padding-right: 100px;}
 
 footer {
     position:fixed;
