--- a/public/views/schools/list.html
+++ b/public/views/schools/list.html
@@ -1,16 +1,15 @@
 <section class="col-md-6 col-md-offset-3" data-ng-controller="SchoolsController">
     <div class="page-header clearfix">
-        <h2 class="pull-left">Schools</h2>
+        <h1 class="pull-left">Schools</h1>
 		<a href="/#/schools/create" class="btn btn-success pull-right">Create new school</a>
     </div>
 
-	<ul class="schools unstyled">
-		<li data-ng-repeat="school in schools">
-			<span>{{school.created | date:'medium'}}</span> /
-			<span>{{school.creator.name}}</span>
-			<h2><a data-ng-href="#/schools/{{school._id}}">{{school.name}}</a></h2>
-			<div>{{school.label}}</div>
-            <button class="btn" ng-click="remove(school)" ng-show="school._id">Remove</button>
-		</li>
-	</ul>
+	<div class="list-group schools">
+	<a data-ng-href="#/schools/{{school._id}}" class="list-group-item" data-ng-repeat="school in schools">
+		<span class="badge">14 <i class="glyphicon glyphicon-user"></i></span>
+		<span class="badge">04 <i class="glyphicon glyphicon-book"></i></span>
+	    <h4 class="list-group-item-heading">{{school.label}} <small>({{school.name}})</small></h4>
+	</a>
+	</div>
+
 </section>
