Showing school label (header)

--- a/public/views/header.html
+++ b/public/views/header.html
@@ -6,7 +6,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Laere</a>
+    <a class="navbar-brand" href="/">Laere <small class="text-muted"><i class="glyphicon glyphicon-chevron-right"></i> {{global.school.label}}</small></a>
   </div>
 
   <div class="collapse navbar-collapse navbar-ex1-collapse">
