Refactors Classroom and Progress as its own Documents

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -55,6 +55,12 @@
 <!--Courses-->
 <script type="text/javascript" src="script/course/course-service.js"></script>
 <script type="text/javascript" src="script/course/course-controller.js"></script>
+<!--Classrooms-->
+<script type="text/javascript" src="script/classroom/classroom-service.js"></script>
+<script type="text/javascript" src="script/classroom/classroom-controller.js"></script>
+<!--Progress-->
+<script type="text/javascript" src="script/progress/progress-service.js"></script>
+<script type="text/javascript" src="script/progress/progress-controller.js"></script>
 <!--Global-->
 <script type="text/javascript" src="script/misc/directives.js"></script>
 <script type="text/javascript" src="script/misc/index-controller.js"></script>
