--- a/public/views/courses/view.html
+++ b/public/views/courses/view.html
@@ -1,4 +1,4 @@
 <section data-ng-controller="CoursesController">
-	<h2>{{course.name}} <a data-ng-show="global.user.permissions.course" href="/#/courses/{{course._id}}/edit">edit</a></h2>
-	<div>{{course.code}}</div>
+	<h2>{{data.course.name}} <a data-ng-show="global.user.permissions.course" href="/#/courses/{{data.course._id}}/edit">edit</a></h2>
+	<div>{{data.course.code}}</div>
 </section>
