--- a/public/views/courses/edit.html
+++ b/public/views/courses/edit.html
@@ -1,28 +1,32 @@
 <section class="col-md-6 col-md-offset-3" data-ng-controller="CoursesController">
     <div class="page-header">
-        <h2 data-ng-hide="course._id">Create your course</h2>
-        <h2 data-ng-show="course._id">Edit your course</h2>
+        <h2 data-ng-hide="data.course._id">Create your course</h2>
+        <h2 data-ng-show="data.course._id">Edit your course</h2>
     </div>
 
     <form class="form clearfix" data-ng-submit="createOrUpdate()">
         <div class="form-group">
             <label class="control-label" for="name">Name</label>
-            <input type="text" data-ng-model="course.name" id="name" placeholder="My course" required class="form-control input-lg" autofocus>
+            <input type="text" data-ng-model="data.course.name" id="name" placeholder="My course" required class="form-control input-lg" autofocus>
         </div>
 
         <div class="form-group">
             <label class="control-label" for="code">Abbreviation</label>
-            <input type="text" data-ng-model="course.code" id="code" placeholder="e.g. INF1005" required class="form-control input-lg">
+            <input type="text" data-ng-model="data.course.code" id="code" placeholder="e.g. INF1005" required class="form-control input-lg">
         </div>
 
-        <div data-ng-show="course._id">
-            <button type="submit" class="btn btn-success btn-lg pull-right" data-ng-hide="edit.content || edit.classroom">Update course  <span class="glyphicon glyphicon-ok-sign"></span></button>
+        <div data-ng-show="data.course._id">
+            <button type="submit" class="btn btn-success btn-lg pull-right" data-ng-hide="data.content || data.classroom">Update course  <span class="glyphicon glyphicon-ok-sign"></span></button>
         </div>
-        <div data-ng-hide="course._id">
-            <button type="submit" class="btn btn-success btn-lg pull-right" data-ng-hide="edit.content || edit.classroom">Create course  <span class="glyphicon glyphicon-ok-sign"></span></button>
+        <div data-ng-hide="data.course._id">
+            <button type="submit" class="btn btn-success btn-lg pull-right" data-ng-hide="data.content || data.classroom">Create course  <span class="glyphicon glyphicon-ok-sign"></span></button>
         </div>
     </form>
 
-    <div ng-include="'views/content/list.html'" class="row" data-ng-show="global.user.permissions.classroom"></div>
-    <div ng-include="'views/classrooms/list.html'" class="row" data-ng-show="global.user.permissions.manage"></div>
+    <div ng-include="'views/content/list.html'"
+         class="row"
+         data-ng-show="global.user.permissions.classroom && data.course._id"></div>
+    <div ng-include="'views/classrooms/list.html'"
+         class="row"
+         data-ng-show="global.user.permissions.manage && data.course._id"></div>
 </section>
