Inserts ng-animate

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,5 +1,5 @@
 <% layout('layout') %>
-<section data-ng-view></section>
+<section data-ng-view class="reveal-animation"></section>
 <script type="text/javascript">
     window.user = <%-user%>;
     window.school = <%-school%>;
