--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -41,6 +41,7 @@
 <script type="text/javascript" src="lib/angular-route/angular-route.min.js"></script>
 <script type="text/javascript" src="lib/angular-cookies/angular-cookies.min.js"></script>
 <script type="text/javascript" src="lib/angular-resource/angular-resource.min.js"></script>
+<script type="text/javascript" src="lib/angular-animate/angular-animate.min.js"></script>
 <script type="text/javascript" src="lib/angular-translate/angular-translate.min.js"></script>
 <script type="text/javascript" src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
 <script type="text/javascript" src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
