--- a/public/style/main.less
+++ b/public/style/main.less
@@ -93,3 +93,25 @@ footer {
 footer p {
     padding:5px 0 12px 10px
 }
+
+/*
+ The animate class is apart of the element and the ng-enter class
+ is attached to the element once the enter animation event is triggered
+*/
+.reveal-animation.ng-enter {
+  -webkit-transition: 0.4s linear all; /* Safari/Chrome */
+  transition: 0.4s linear all; /* All other modern browsers and IE10+ */
+
+  /* The animation preparation code */
+  opacity: 0;
+}
+
+/*
+ Keep in mind that you want to combine both CSS
+ classes together to avoid any CSS-specificity
+ conflicts
+*/
+.reveal-animation.ng-enter.ng-enter-active {
+  /* The animation code itself */
+  opacity: 1;
+}
